<resources>
    <string name="app_name">MathZoo</string>

    <string name="MainActivity_Spill">Spill</string>
    <string name="MainActivity_Statistic">Statestikk</string>
    <string name="MainActivity_Preferences">Preferanser</string>

    <string name="string_exit">Avslutt</string>
    <string name="string_cancell">Avbryt</string>
    <string name="string_check_answer">Sjekk svar</string>
    <string name="string_delete_button">Slett</string>
    <string name="string_correct">Riktig!</string>
    <string name="string_wrong">Ikke helt riktig</string>
    <string name="string_finished">Ferdig</string>
    <string name="string_new_game">Nytt spill</string>
    <string name="string_leaving_game">Forlate spill?</string>

    <string name="string_last_game_statistic">Forrige spill:</string>
    <string name="string_total_game_statistic">Total score:</string>
    <string name="string_finished_dialog">Hurra!</string>
    <string name="string_finished_dialog2">Du fullførte spillet</string>

    <string name="string_language">Språk</string>
    <string name="string_german">Tysk</string>
    <string name="string_norwegian">Norsk</string>

    <string name="number_of_questions">Antall Regnestykker</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_statistic">StatisticActivity</string>

    <string name="string_number_one">1</string>
    <string name="string_number_two">2</string>
    <string name="string_number_three">3</string>
    <string name="string_number_four">4</string>
    <string name="string_number_five">5</string>
    <string name="string_number_six">6</string>
    <string name="string_number_seven">7</string>
    <string name="string_number_eight">8</string>
    <string name="string_number_nine">9</string>
    <string name="string_number_zero">0</string>
</resources>
