<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:adjustViewBounds="false"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:cropToPadding="false"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_award" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_finished_dialog"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:text="@string/string_finished_dialog2"
        android:textAlignment="center" />
</LinearLayout>