<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        />

    <Button
        android:id="@+id/btn_start_game"
        android:text="@string/MainActivity_Spill"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/sh_round_btn"

        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_statistic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/sh_round_btn"
        android:text="@string/MainActivity_Statistic"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="@+id/bottomNavigationView" />

    <Button
        android:id="@+id/btn_preferences"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/sh_round_btn"
        android:text="@string/MainActivity_Preferences"
        android:onClick="showPreferences"

        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="@+id/bottomNavigationView" />



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_bottomnavigationview"
        tools:background="#f9d" />



    <Toolbar
        android:id="@+id/mintoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="norsk"
            android:text="@string/string_norwegian"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tysk"
            android:text="@string/string_german"/>
    </Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>